// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Input/demo/addon.md correctly 1`] = `
<div
  class="arco-space arco-space-vertical"
>
  <div
    class="arco-space-item"
    style="margin-bottom:8px"
  >
    <div
      class="arco-space arco-space-horizontal arco-space-align-center arco-space-wrap"
    >
      <div
        class="arco-space-item"
        style="margin-right:8px;margin-bottom:8px"
      >
        <div
          class="arco-input-group-wrapper arco-input-group-wrapper-default"
          style="width:350px"
        >
          <span
            class="arco-input-group"
          >
            <span
              class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
            >
              <input
                class="arco-input arco-input-size-default"
                placeholder="Please enter"
                value=""
              />
            </span>
            <span
              class="arco-input-group-addafter"
            >
              RMB
            </span>
          </span>
        </div>
      </div>
      <div
        class="arco-space-item"
        style="margin-bottom:8px"
      >
        <div
          class="arco-input-group-wrapper arco-input-group-wrapper-default"
          style="width:350px"
        >
          <span
            class="arco-input-group"
          >
            <span
              class="arco-input-group-addbefore"
            >
              +86
            </span>
            <span
              class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
            >
              <input
                class="arco-input arco-input-size-default"
                placeholder="Please enter"
                value=""
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-space arco-space-horizontal arco-space-align-center arco-space-wrap"
    >
      <div
        class="arco-space-item"
        style="margin-right:8px;margin-bottom:8px"
      >
        <div
          class="arco-input-group-wrapper arco-input-group-wrapper-default"
          style="width:350px"
        >
          <span
            class="arco-input-group"
          >
            <span
              class="arco-input-group-addbefore"
            >
              http://
            </span>
            <span
              class="arco-input-inner-wrapper arco-input-inner-wrapper-default arco-input-clear-wrapper"
            >
              <input
                class="arco-input arco-input-size-default"
                placeholder="Please enter"
                value=""
              />
            </span>
            <span
              class="arco-input-group-addafter"
            >
              <div
                class="arco-select arco-select-single arco-select-show-search arco-select-size-default"
                style="width:80px"
                tabindex="0"
              >
                <div
                  class="arco-select-view"
                  title=".com"
                >
                  <input
                    autocomplete="off"
                    class="arco-select-view-input arco-select-hidden"
                    placeholder=".com"
                    style="width:100%"
                    value=".com"
                  />
                  <span
                    class="arco-select-view-value"
                  >
                    .com
                  </span>
                  <div
                    class="arco-select-suffix"
                  >
                    <div
                      class="arco-select-expand-icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="arco-icon arco-icon-expand"
                        fill="none"
                        focusable="false"
                        stroke="currentColor"
                        stroke-width="4"
                        style="transform:rotate(-45deg)"
                        viewBox="0 0 48 48"
                      >
                        <path
                          d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </span>
          </span>
        </div>
      </div>
      <div
        class="arco-space-item"
        style="margin-bottom:8px"
      >
        <div
          class="arco-input-group-wrapper arco-input-group-wrapper-default"
          style="width:350px"
        >
          <span
            class="arco-input-group"
          >
            <span
              class="arco-input-group-addbefore"
            >
              www.
            </span>
            <span
              class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
            >
              <input
                class="arco-input arco-input-size-default"
                placeholder="Please enter"
                value=""
              />
            </span>
            <span
              class="arco-input-group-addafter"
            >
              .com
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Input/demo/basic.md correctly 1`] = `
<span
  class="arco-input-inner-wrapper arco-input-inner-wrapper-default arco-input-clear-wrapper"
  style="width:350px"
>
  <input
    class="arco-input arco-input-size-default"
    placeholder="Please Enter something"
    value=""
  />
</span>
`;

exports[`renders Input/demo/group.md correctly 1`] = `
<div>
  <div
    class="arco-row arco-row-align-start arco-row-justify-start"
  >
    <div
      style="margin-right:24px;width:360px;display:inline-block;margin-bottom:24px"
    >
      <div
        class="arco-input-group arco-input-group-compact"
      >
        <div
          class="arco-select arco-select-single arco-select-show-search arco-select-size-default"
          style="width:25%"
          tabindex="0"
        >
          <div
            class="arco-select-view"
            title="Beijing"
          >
            <input
              autocomplete="off"
              class="arco-select-view-input arco-select-hidden"
              placeholder="Beijing"
              style="width:100%"
              value="Beijing"
            />
            <span
              class="arco-select-view-value"
            >
              Beijing
            </span>
            <div
              class="arco-select-suffix"
            >
              <div
                class="arco-select-expand-icon"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-expand"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  style="transform:rotate(-45deg)"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <input
          class="arco-input arco-input-size-default"
          placeholder="Please enter an address"
          style="width:75%"
          value=""
        />
      </div>
    </div>
    <div
      style="margin-right:24px;width:360px;display:inline-block;margin-bottom:24px"
    >
      <div
        class="arco-input-group arco-input-group-compact"
      >
        <div
          class="arco-select arco-select-single arco-select-show-search arco-select-size-default"
          style="width:25%"
          tabindex="0"
        >
          <div
            class="arco-select-view"
            title="Beijing"
          >
            <input
              autocomplete="off"
              class="arco-select-view-input arco-select-hidden"
              placeholder="Beijing"
              style="width:100%"
              value="Beijing"
            />
            <span
              class="arco-select-view-value"
            >
              Beijing
            </span>
            <div
              class="arco-select-suffix"
            >
              <div
                class="arco-select-expand-icon"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-expand"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  style="transform:rotate(-45deg)"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="arco-picker arco-picker-size-default"
          style="width:75%"
        >
          <div
            class="arco-picker-input"
          >
            <input
              class="arco-picker-start-time"
              placeholder="请选择日期"
              value=""
            />
          </div>
          <div
            class="arco-picker-suffix"
          >
            <span
              class="arco-picker-suffix-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-calendar"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      style="margin-right:24px;width:360px;display:inline-block;margin-bottom:24px"
    >
      <div
        class="arco-input-group arco-input-group-compact"
      >
        <div
          class="arco-select arco-select-single arco-select-show-search arco-select-size-default"
          style="width:25%"
          tabindex="0"
        >
          <div
            class="arco-select-view"
            title="Beijing"
          >
            <input
              autocomplete="off"
              class="arco-select-view-input arco-select-hidden"
              placeholder="Beijing"
              style="width:100%"
              value="Beijing"
            />
            <span
              class="arco-select-view-value"
            >
              Beijing
            </span>
            <div
              class="arco-select-suffix"
            >
              <div
                class="arco-select-expand-icon"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-expand"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  style="transform:rotate(-45deg)"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M7 26v14c0 .552.444 1 .996 1H22m19-19V8c0-.552-.444-1-.996-1H26"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix arco-input-search"
          style="width:75%"
        >
          <span
            class="arco-input-group"
          >
            <span
              class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
            >
              <input
                class="arco-input arco-input-size-default"
                placeholder="Search"
                value=""
              />
              <span
                class="arco-input-group-suffix"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-search"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M33.072 33.071c6.248-6.248 6.248-16.379 0-22.627-6.249-6.249-16.38-6.249-22.628 0-6.248 6.248-6.248 16.379 0 22.627 6.248 6.248 16.38 6.248 22.628 0Zm0 0 8.485 8.485"
                  />
                </svg>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-row arco-row-align-start arco-row-justify-start"
  >
    <div
      style="margin-right:24px;width:360px;display:inline-block;margin-bottom:24px"
    >
      <div
        class="arco-input-group"
      >
        <input
          class="arco-input arco-input-size-default"
          readonly=""
          style="width:24%;margin-right:8px"
          value="010"
        />
        <input
          class="arco-input arco-input-size-default"
          placeholder="Phone number"
          style="width:60%"
          value=""
        />
      </div>
    </div>
    <div
      style="margin-right:24px;width:360px;display:inline-block;margin-bottom:24px"
    >
      <div
        class="arco-input-group"
      >
        <input
          class="arco-input arco-input-size-default"
          readonly=""
          style="width:24%;margin-right:8px"
          value="010"
        />
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-minus"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          style="color:var(--color-text-1)"
          viewBox="0 0 48 48"
        >
          <path
            d="M5 24h38"
          />
        </svg>
        <input
          class="arco-input arco-input-size-default"
          placeholder="Phone number"
          style="width:60%;margin-left:8px"
          value="8899887"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Input/demo/max-length.md correctly 1`] = `
<div
  class="arco-space arco-space-vertical"
>
  <div
    class="arco-space-item"
    style="margin-bottom:8px"
  >
    <div>
      <div
        class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix"
        style="width:300px;margin-bottom:24px;margin-right:20px"
      >
        <span
          class="arco-input-group"
        >
          <span
            class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
          >
            <input
              class="arco-input arco-input-size-default"
              maxlength="10"
              placeholder="Please enter no more than 10 letters"
              value=""
            />
            <span
              class="arco-input-group-suffix"
            >
              <span
                class="arco-input-word-limit"
              >
                0/10
              </span>
            </span>
          </span>
        </span>
      </div>
      <div
        class="arco-textarea-wrapper"
        style="width:300px;margin-bottom:24px"
      >
        <textarea
          class="arco-textarea"
          maxlength="50"
          placeholder="Please enter no more than 50 letters"
        />
        <span
          class="arco-textarea-word-limit"
        >
          0/50
        </span>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div>
      <div
        class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix"
        style="width:300px;margin-bottom:24px;margin-right:20px"
      >
        <span
          class="arco-input-group"
        >
          <span
            class="arco-input-inner-wrapper arco-input-inner-wrapper-error arco-input-inner-wrapper-default"
          >
            <input
              class="arco-input arco-input-size-default"
              value="More than 10 letters will be error"
            />
            <span
              class="arco-input-group-suffix"
            >
              <span
                class="arco-input-word-limit arco-input-word-limit-error"
              >
                34/10
              </span>
            </span>
          </span>
        </span>
      </div>
      <div
        class="arco-textarea-wrapper"
        style="width:300px;margin-bottom:24px"
      >
        <textarea
          class="arco-textarea"
          placeholder="More than 50 letters will be error"
        />
        <span
          class="arco-textarea-word-limit"
        >
          0/50
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Input/demo/password.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center arco-space-wrap"
>
  <div
    class="arco-space-item"
    style="margin-right:8px;margin-bottom:8px"
  >
    <div
      class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix arco-input-password arco-input-password-visibility"
      style="width:350px"
    >
      <span
        class="arco-input-group"
      >
        <span
          class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
        >
          <input
            class="arco-input arco-input-size-default"
            type="password"
            value="password"
          />
          <span
            class="arco-input-group-suffix"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-eye-invisible"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M14 14.5c-2.69 2-5.415 5.33-8 9.5 5.373 8.667 11.373 13 18 13 3.325 0 6.491-1.09 9.5-3.271M17.463 12.5C19 11 21.75 11 24 11c6.627 0 12.627 4.333 18 13-1.766 2.848-3.599 5.228-5.5 7.14"
              />
              <path
                d="M29 24a5 5 0 1 1-10 0 5 5 0 0 1 10 0ZM6.852 7.103l34.294 34.294"
              />
            </svg>
          </span>
        </span>
      </span>
    </div>
  </div>
  <div
    class="arco-space-item"
    style="margin-bottom:8px"
  >
    <div
      class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix arco-input-password arco-input-password-visibility"
      style="width:350px"
    >
      <span
        class="arco-input-group"
      >
        <span
          class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
        >
          <input
            class="arco-input arco-input-size-default"
            placeholder="Please enter ..."
            type="text"
            value="password"
          />
          <span
            class="arco-input-group-suffix"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-eye"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                clip-rule="evenodd"
                d="M24 37c6.627 0 12.627-4.333 18-13-5.373-8.667-11.373-13-18-13-6.627 0-12.627 4.333-18 13 5.373 8.667 11.373 13 18 13Z"
              />
              <path
                d="M29 24a5 5 0 1 1-10 0 5 5 0 0 1 10 0Z"
              />
            </svg>
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders Input/demo/prefix_suffix.md correctly 1`] = `
<div
  class="arco-space arco-space-vertical"
>
  <div
    class="arco-space-item"
    style="margin-bottom:8px"
  >
    <div
      class="arco-space arco-space-horizontal arco-space-align-center arco-space-wrap"
    >
      <div
        class="arco-space-item"
        style="margin-right:8px;margin-bottom:8px"
      >
        <div
          class="arco-input-group-wrapper arco-input-group-wrapper-default"
          style="width:350px"
        >
          <span
            class="arco-input-group"
          >
            <span
              class="arco-input-inner-wrapper arco-input-inner-wrapper-has-prefix arco-input-inner-wrapper-default"
            >
              <span
                class="arco-input-group-prefix"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-user"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M7 37c0-4.97 4.03-8 9-8h16c4.97 0 9 3.03 9 8v3a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1v-3Z"
                  />
                  <circle
                    cx="24"
                    cy="15"
                    r="8"
                  />
                </svg>
              </span>
              <input
                class="arco-input arco-input-size-default"
                placeholder="Please enter"
                value=""
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="arco-space-item"
        style="margin-bottom:8px"
      >
        <div
          class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix"
          style="width:350px"
        >
          <span
            class="arco-input-group"
          >
            <span
              class="arco-input-inner-wrapper arco-input-inner-wrapper-default arco-input-clear-wrapper"
            >
              <input
                class="arco-input arco-input-size-default"
                placeholder="Please enter"
                value=""
              />
              <span
                class="arco-input-group-suffix"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-info-circle"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M24 20v14m0-16v-4m18 10c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
                  />
                </svg>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-space arco-space-horizontal arco-space-align-center arco-space-wrap"
    >
      <div
        class="arco-space-item"
        style="margin-right:8px;margin-bottom:8px"
      >
        <div
          class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix"
          style="width:350px"
        >
          <span
            class="arco-input-group"
          >
            <span
              class="arco-input-inner-wrapper arco-input-inner-wrapper-has-prefix arco-input-inner-wrapper-default"
            >
              <span
                class="arco-input-group-prefix"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-user"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M7 37c0-4.97 4.03-8 9-8h16c4.97 0 9 3.03 9 8v3a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1v-3Z"
                  />
                  <circle
                    cx="24"
                    cy="15"
                    r="8"
                  />
                </svg>
              </span>
              <input
                class="arco-input arco-input-size-default"
                placeholder="Please enter"
                value=""
              />
              <span
                class="arco-input-group-suffix"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-info-circle"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M24 20v14m0-16v-4m18 10c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
                  />
                </svg>
              </span>
            </span>
          </span>
        </div>
      </div>
      <div
        class="arco-space-item"
        style="margin-bottom:8px"
      >
        <div
          class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix"
          style="width:350px"
        >
          <span
            class="arco-input-group"
          >
            <span
              class="arco-input-group-addbefore"
            >
              +86
            </span>
            <span
              class="arco-input-inner-wrapper arco-input-inner-wrapper-has-prefix arco-input-inner-wrapper-default arco-input-clear-wrapper"
            >
              <span
                class="arco-input-group-prefix"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-user"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M7 37c0-4.97 4.03-8 9-8h16c4.97 0 9 3.03 9 8v3a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1v-3Z"
                  />
                  <circle
                    cx="24"
                    cy="15"
                    r="8"
                  />
                </svg>
              </span>
              <input
                class="arco-input arco-input-size-default"
                placeholder="Please enter"
                value=""
              />
              <span
                class="arco-input-group-suffix"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-info-circle"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M24 20v14m0-16v-4m18 10c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="arco-input-group-addafter"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-search"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M33.072 33.071c6.248-6.248 6.248-16.379 0-22.627-6.249-6.249-16.38-6.249-22.628 0-6.248 6.248-6.248 16.379 0 22.627 6.248 6.248 16.38 6.248 22.628 0Zm0 0 8.485 8.485"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Input/demo/search.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center arco-space-wrap"
>
  <div
    class="arco-space-item"
    style="margin-right:8px;margin-bottom:8px"
  >
    <div
      class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix arco-input-search"
      style="width:350px"
    >
      <span
        class="arco-input-group"
      >
        <span
          class="arco-input-inner-wrapper arco-input-inner-wrapper-default arco-input-clear-wrapper"
        >
          <input
            class="arco-input arco-input-size-default"
            placeholder="Enter keyword to search"
            value=""
          />
          <span
            class="arco-input-group-suffix"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-search"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M33.072 33.071c6.248-6.248 6.248-16.379 0-22.627-6.249-6.249-16.38-6.249-22.628 0-6.248 6.248-6.248 16.379 0 22.627 6.248 6.248 16.38 6.248 22.628 0Zm0 0 8.485 8.485"
              />
            </svg>
          </span>
        </span>
      </span>
    </div>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:8px;margin-bottom:8px"
  >
    <div
      class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-search arco-input-search-button"
      style="width:350px"
    >
      <span
        class="arco-input-group"
      >
        <span
          class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
        >
          <input
            class="arco-input arco-input-size-default"
            placeholder="Enter keyword to search"
            value="Search content"
          />
        </span>
        <span
          class="arco-input-group-addafter"
        >
          <button
            class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-loading-fixed-width arco-btn-icon-only arco-input-search-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-search"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M33.072 33.071c6.248-6.248 6.248-16.379 0-22.627-6.249-6.249-16.38-6.249-22.628 0-6.248 6.248-6.248 16.379 0 22.627 6.248 6.248 16.38 6.248 22.628 0Zm0 0 8.485 8.485"
              />
            </svg>
          </button>
        </span>
      </span>
    </div>
  </div>
  <div
    class="arco-space-item"
    style="margin-bottom:8px"
  >
    <div
      class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-search arco-input-search-button"
      style="width:350px"
    >
      <span
        class="arco-input-group"
      >
        <span
          class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
        >
          <input
            class="arco-input arco-input-size-default"
            placeholder="Enter keyword to search"
            value="Search content"
          />
        </span>
        <span
          class="arco-input-group-addafter"
        >
          <button
            class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-loading-fixed-width arco-input-search-btn"
            type="button"
          >
            <span>
              Search
            </span>
          </button>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders Input/demo/search_loading.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center arco-space-wrap"
>
  <div
    class="arco-space-item"
    style="margin-right:8px;margin-bottom:8px"
  >
    <div
      class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix arco-input-search"
      style="width:350px"
    >
      <span
        class="arco-input-group"
      >
        <span
          class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
        >
          <input
            class="arco-input arco-input-size-default"
            placeholder="Enter keyword to search"
            value=""
          />
          <span
            class="arco-input-group-suffix"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-loading"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
              />
            </svg>
          </span>
        </span>
      </span>
    </div>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:8px;margin-bottom:8px"
  >
    <div
      class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-search arco-input-search-button"
      style="width:350px"
    >
      <span
        class="arco-input-group"
      >
        <span
          class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
        >
          <input
            class="arco-input arco-input-size-default"
            placeholder="Enter keyword to search"
            value="Search content"
          />
        </span>
        <span
          class="arco-input-group-addafter"
        >
          <button
            class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-loading-fixed-width arco-btn-loading arco-btn-icon-only arco-input-search-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-loading"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
              />
            </svg>
          </button>
        </span>
      </span>
    </div>
  </div>
  <div
    class="arco-space-item"
    style="margin-bottom:8px"
  >
    <div
      class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-search arco-input-search-button"
      style="width:350px"
    >
      <span
        class="arco-input-group"
      >
        <span
          class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
        >
          <input
            class="arco-input arco-input-size-default"
            placeholder="Enter keyword to search"
            value="Search content"
          />
        </span>
        <span
          class="arco-input-group-addafter"
        >
          <button
            class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-loading-fixed-width arco-btn-loading arco-input-search-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-loading"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
              />
            </svg>
            <span>
              Search
            </span>
          </button>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders Input/demo/size.md correctly 1`] = `
<div>
  <div
    class="arco-radio-group arco-radio-group-type-button arco-radio-size-default arco-radio-mode-fill"
    style="margin-bottom:24px"
  >
    <label
      class="arco-radio-button"
    >
      <input
        name="size"
        type="radio"
        value="mini"
      />
      <span
        class="arco-radio-button-inner"
      >
        mini
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="size"
        type="radio"
        value="small"
      />
      <span
        class="arco-radio-button-inner"
      >
        small
      </span>
    </label>
    <label
      class="arco-radio-button arco-radio-checked"
    >
      <input
        checked=""
        name="size"
        type="radio"
        value="default"
      />
      <span
        class="arco-radio-button-inner"
      >
        default
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="size"
        type="radio"
        value="large"
      />
      <span
        class="arco-radio-button-inner"
      >
        large
      </span>
    </label>
  </div>
  <br />
  <span
    class="arco-typography"
  >
    Custom height
  </span>
  <div
    class="arco-slider"
    style="width:180px;margin:0 0 20px 20px"
  >
    <div
      class="arco-slider-wrapper"
    >
      <div
        class="arco-slider-road"
      >
        <div
          class="arco-slider-bar"
          style="left:0%;right:100%"
        />
        <div
          aria-disabled="false"
          aria-valuemax="60"
          aria-valuemin="24"
          aria-valuenow="24"
          aria-valuetext="24"
          class="arco-slider-button"
          role="slider"
          style="left:0%"
          tabindex="0"
        />
      </div>
    </div>
  </div>
  <div>
    <div
      class="arco-input-group-wrapper arco-input-group-wrapper-default"
      style="width:350px;margin-right:24px;margin-bottom:24px"
    >
      <span
        class="arco-input-group"
      >
        <span
          class="arco-input-inner-wrapper arco-input-inner-wrapper-has-prefix arco-input-inner-wrapper-default"
        >
          <span
            class="arco-input-group-prefix"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-clock-circle"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
              />
            </svg>
          </span>
          <input
            class="arco-input arco-input-size-default"
            placeholder="Please enter something"
            value=""
          />
        </span>
      </span>
    </div>
    <div
      class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix"
      style="width:350px;margin-bottom:24px"
    >
      <span
        class="arco-input-group"
      >
        <span
          class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
        >
          <input
            class="arco-input arco-input-size-default"
            placeholder="Please enter something"
            value=""
          />
          <span
            class="arco-input-group-suffix"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-info-circle"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24 20v14m0-16v-4m18 10c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
              />
            </svg>
          </span>
        </span>
      </span>
    </div>
  </div>
  <div>
    <div
      class="arco-input-group-wrapper arco-input-group-wrapper-default"
      style="width:350px;margin-right:24px;margin-bottom:24px"
    >
      <span
        class="arco-input-group"
      >
        <span
          class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
        >
          <input
            class="arco-input arco-input-size-default"
            placeholder="Please enter something"
            value=""
          />
        </span>
        <span
          class="arco-input-group-addafter"
        >
          KG
        </span>
      </span>
    </div>
    <div
      class="arco-input-group-wrapper arco-input-group-wrapper-default"
      style="width:350px;margin-bottom:24px"
    >
      <span
        class="arco-input-group"
      >
        <span
          class="arco-input-group-addbefore"
        >
          +86
        </span>
        <span
          class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
        >
          <input
            class="arco-input arco-input-size-default"
            placeholder="Please enter something"
            value=""
          />
        </span>
      </span>
    </div>
  </div>
  <div>
    <div
      class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix"
      style="width:350px;margin-bottom:24px;margin-right:24px"
    >
      <span
        class="arco-input-group"
      >
        <span
          class="arco-input-group-addbefore"
        >
          +86
        </span>
        <span
          class="arco-input-inner-wrapper arco-input-inner-wrapper-has-prefix arco-input-inner-wrapper-default arco-input-clear-wrapper"
        >
          <span
            class="arco-input-group-prefix"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-clock-circle"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
              />
            </svg>
          </span>
          <input
            class="arco-input arco-input-size-default"
            placeholder="Please enter something"
            value=""
          />
          <span
            class="arco-input-group-suffix"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-info-circle"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24 20v14m0-16v-4m18 10c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
              />
            </svg>
          </span>
        </span>
        <span
          class="arco-input-group-addafter"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-search"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M33.072 33.071c6.248-6.248 6.248-16.379 0-22.627-6.249-6.249-16.38-6.249-22.628 0-6.248 6.248-6.248 16.379 0 22.627 6.248 6.248 16.38 6.248 22.628 0Zm0 0 8.485 8.485"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-search arco-input-search-button"
      style="width:350px;margin-bottom:24px"
    >
      <span
        class="arco-input-group"
      >
        <span
          class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
        >
          <input
            class="arco-input arco-input-size-default"
            placeholder="Please enter something"
            value=""
          />
        </span>
        <span
          class="arco-input-group-addafter"
        >
          <button
            class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-loading-fixed-width arco-btn-icon-only arco-input-search-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-search"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M33.072 33.071c6.248-6.248 6.248-16.379 0-22.627-6.249-6.249-16.38-6.249-22.628 0-6.248 6.248-6.248 16.379 0 22.627 6.248 6.248 16.38 6.248 22.628 0Zm0 0 8.485 8.485"
              />
            </svg>
          </button>
        </span>
      </span>
    </div>
  </div>
  <div>
    <div
      class="arco-input-group-wrapper arco-input-group-wrapper-default"
      style="width:350px;margin-bottom:24px;margin-right:24px"
    >
      <span
        class="arco-input-group"
      >
        <span
          class="arco-input-group-addbefore"
        >
          <div
            class="arco-select arco-select-single arco-select-size-default"
            style="width:100px"
            tabindex="0"
          >
            <div
              class="arco-select-view"
              title=""
            >
              <input
                autocomplete="off"
                class="arco-select-view-input"
                placeholder="Please select"
                style="width:100%;pointer-events:none"
                tabindex="-1"
                value=""
              />
              <span
                class="arco-select-view-value arco-select-hidden"
              />
              <div
                class="arco-select-suffix"
              >
                <div
                  class="arco-select-arrow-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="arco-icon arco-icon-down"
                    fill="none"
                    focusable="false"
                    stroke="currentColor"
                    stroke-width="4"
                    viewBox="0 0 48 48"
                  >
                    <path
                      d="M39.6 17.443 24.043 33 8.487 17.443"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </span>
        <span
          class="arco-input-inner-wrapper arco-input-inner-wrapper-default arco-input-clear-wrapper"
        >
          <input
            class="arco-input arco-input-size-default"
            placeholder="Please enter something"
            value=""
          />
        </span>
      </span>
    </div>
    <span
      class="arco-input-inner-wrapper arco-input-inner-wrapper-default arco-input-clear-wrapper"
      style="width:350px;margin-bottom:24px"
    >
      <input
        class="arco-input arco-input-size-default"
        placeholder="Please enter something"
        value=""
      />
    </span>
  </div>
</div>
`;

exports[`renders Input/demo/status.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center arco-space-wrap"
>
  <div
    class="arco-space-item"
    style="margin-right:8px;margin-bottom:8px"
  >
    <input
      aria-invalid="true"
      class="arco-input arco-input-size-default arco-input-error"
      placeholder="error status"
      style="width:350px"
      value=""
    />
  </div>
  <div
    class="arco-space-item"
    style="margin-bottom:8px"
  >
    <input
      class="arco-input arco-input-size-default arco-input-disabled"
      disabled=""
      placeholder="disabled input"
      style="width:350px"
      value=""
    />
  </div>
</div>
`;

exports[`renders Input/demo/textarea.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center arco-space-wrap"
>
  <div
    class="arco-space-item"
    style="margin-right:8px;margin-bottom:8px"
  >
    <textarea
      class="arco-textarea"
      placeholder="Please enter ..."
      style="min-height:64px;width:350px"
    />
  </div>
  <div
    class="arco-space-item"
    style="margin-bottom:8px"
  >
    <textarea
      class="arco-textarea arco-textarea-disabled"
      disabled=""
      style="min-height:64px;width:350px;resize:none"
    >
      Disabled
    </textarea>
  </div>
</div>
`;

exports[`renders Input/demo/textarea_autosize.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-top arco-space-wrap"
>
  <div
    class="arco-space-item"
    style="margin-right:8px;margin-bottom:8px"
  >
    <textarea
      class="arco-textarea"
      placeholder="Please enter ..."
      style="width:350px"
    >
      This is the contents of the textarea. 
    </textarea>
  </div>
  <div
    class="arco-space-item"
    style="margin-bottom:8px"
  >
    <textarea
      class="arco-textarea"
      placeholder="Please enter ..."
      style="width:350px"
    >
      This is the contents of the textarea. This is the contents of the textarea. This is the contents of the textarea. 
    </textarea>
  </div>
</div>
`;
